--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "6.9.0",
+    "mobx-react": "7.6.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-fs": "2.20.0"
